# Haskell_task2

./: .ghci  main.cabal
app/: Main.hs
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
dist-newstyle/packagedb/ghc-8.8.4/: main-0.1.0.0-inplace.conf  package.cache
src/: MyLib.hs
