cabal-version:       2.4
name:                main
version:             0.1.0.0
author:              DenysShpak0116
maintainer:          shpak.denys.oleks@gmail.com
license:             BSD-2-Clause
license-file:        LICENSE
build-type:          Simple

library
  exposed-modules:     MyLib
  hs-source-dirs:      src
  build-depends:      
    base >=4.7 && <5,
    parallel >=3.2,
    time >=1.9
  default-language:    Haskell2010

executable main
  main-is:             Main.hs
  hs-source-dirs:      app
  build-depends:       
    base >=4.7 && <5,
    main,
    parallel >=3.2,
    time >=1.9
  default-language:    Haskell2010
